Creado mediante Colaboratory

--- a/Pruebas_de_unidad.ipynb
+++ b/Pruebas_de_unidad.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "id": "Vbv4Q1WIzJGi"
       },
@@ -55,12 +55,13 @@
         "        return a * b\n",
         "\n",
         "    def div(self, a, b):\n",
-        "        return a / b"
+        "        if b != 0:\n",
+        "            return a / b"
       ],
       "metadata": {
         "id": "Bj2884KmzM0-"
       },
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -101,7 +102,7 @@
       "metadata": {
         "id": "BmO1ExRBzWRl"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -114,9 +115,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n0oF9ToCzolJ",
-        "outputId": "9fe060f1-8615-4cd1-ded1-8c0700e2ffc6"
+        "outputId": "536851e1-d52f-4c24-d9ef-ea03080e95db"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,7 +133,7 @@
             "Test case function for subtraction ... ok\n",
             "\n",
             "----------------------------------------------------------------------\n",
-            "Ran 4 tests in 0.013s\n",
+            "Ran 4 tests in 0.016s\n",
             "\n",
             "OK\n"
           ]
@@ -141,11 +142,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<unittest.main.TestProgram at 0x7f6a35a4f750>"
+              "<unittest.main.TestProgram at 0x7f4d88689bd0>"
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 4
         }
       ]
     }
